--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,5 +16,7 @@
   <div id="container">
     <strong>Ready to create an app?</strong>
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <p>Screen Orientation: {{ screenorientation }}</p>
+    <ion-button (click)="lockAndUnlock()">{{ buttonText }}</ion-button>
   </div>
 </ion-content>
